<resources>
    <string name="app_name">Impromptu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_facebook_login">Login with Facebook</string>
    <string name="login_prompt">Sign in to Impromptu using your Facebook account! It\'s easy to find your friends and give away all your personal information without realizing it.</string>
    <string name="title_activity_find_event">Map</string>
    <string name="title_activity_create_event">Create an Event</string>
    <string name="title_activity_join_event">Join an Event</string>
    <string name="error_title">Something went wrong</string>
    <string name="error_dialog_acknowledge_button">Shucks</string>
    <string name="interests_prompt">What do you like to do? Please enter at least 3 things you would enjoy doing with other people.</string>
    <string name="example_interest1">e.g. karaoke</string>
    <string name="example_interest2">e.g. dining out</string>
    <string name="example_interest3">e.g. soccer</string>
    <string name="example_interest4">e.g. meeting for coffee</string>
    <string name="example_interest5">e.g. video games</string>
    <string name="submit">Submit</string>
    <string name="get_started">Get Started!</string>
    <string name="search">Search for an event by category</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="category">category (e.g. Singing)</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="show_names">Show Names</string>
    <string name="uni">UNI</string>
    <string name="name">name</string>
    <string name="create_event_button">Create Event</string>
    <string name="join_event">Join Event</string>
    <string name="selected_event_info">Selected event info</string>
</resources>
