<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="14dp"
        android:background="#ffffff"
        android:gravity="start|end"
        android:hint="@string/title"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="10dp"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/event_desc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/event_title"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="27dp"
        android:background="#ffffff"
        android:gravity="start|end"
        android:hint="@string/description"
        android:imeOptions="actionSearch"
        android:inputType="text|textMultiLine"
        android:padding="10dp" />

    <EditText
        android:id="@+id/event_category"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/event_desc"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="28dp"
        android:background="#ffffff"
        android:gravity="start|end"
        android:hint="@string/category"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event_category"
        android:layout_below="@+id/event_category"
        android:layout_marginTop="53dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/date" />

    <Button
        android:id="@+id/time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_event"
        android:layout_centerHorizontal="true"
        android:onClick="showTimePickerDialog"
        android:text="@string/time" />

    <Button
        android:id="@+id/create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:text="@string/create_event_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:onClick="sendEventToDatabase" />

    <Button
        android:id="@+id/loc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_event"
        android:layout_alignEnd="@+id/event_category"
        android:text="@string/location"
        android:onClick="showLocation" />

</RelativeLayout>